--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 body {
+  overflow: hidden;
   margin: 0;
   font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
